# Sistema-Pos-Ventas

./: .env.example
backend/: .flake8  README.md  pyproject.toml
backend/docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/api/v1/: Scopes.md  __init__.py
backend/src/api/v1/routes/: __init__.py  category.py  client.py  employee.py  files.py  invoice.py  order.py  payment.py  product.py  service.py
backend/src/core/: __init__.py  auth.py  authentication.py  authorization.py  errors.py  logging.py  rate_limit.py  settings.py  storage.py
backend/src/crud/: order.py  others.py  product.py  service.py  user.py
backend/src/db/: __init__.py  main.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 09dd04194263_add_is_verified_attribute.py  (+10 more)
backend/src/middlewares/: __init__.py  logging.py
backend/src/models/: __init__.py  client.py  employee.py  order.py  others.py  payment.py  product.py  service.py
backend/src/models/abc/: __init__.py  base.py  user.py
backend/src/repositories/: __init__.py  category.py  client.py  employee.py  order.py  order_product.py  order_service.py  payment.py  product.py  product_category.py  service.py  service_input.py
backend/src/repositories/abc/: __init__.py  base.py  contracts.py  user.py
backend/src/schemas/: __init__.py  client.py  employee.py  order.py  payment.py  product.py  service.py
backend/src/schemas/abc/: __init__.py  base.py  user.py
backend/src/services/: __init__.py  category.py  client.py  email.py  employee.py  file.py  inventory.py  invoice.py  order.py  order_product.py  order_service.py  payment.py  product.py  product_category.py  product_image.py  service.py  service_input.py
backend/src/services/abc/: __init__.py  base.py  contracts.py  user.py
backend/src/templates/: email_verification.html  reset_email.html
backend/src/utils/: __init__.py  product.py
backend/tests/: test_dummy.py
(+4 files in other folders)
