[project]
name = "backend"
version = "0.1.0"
package-mode = false
description = " Backend de sistema POS de ventas"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "fastapi-pagination>=0.15.5",
    "jinja2>=3.1.6",
    "jwt>=1.4.0",
    "logfire[celery,fastapi,sqlalchemy]>=4.18.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.21",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
    "weasyprint>=67.0",
]
