[project]
name = "backend"
version = "0.1.0"
description = " Backend de sistema POS de ventas"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "authlib>=1.6.6",
    "fastapi>=0.128.0",
    "fastapi-pagination>=0.15.5",
    "fastapi-querybuilder>=0.1.13",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jwt>=1.4.0",
    "logfire[celery,fastapi,sqlalchemy]>=4.18.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.31",
    "supertokens-python @ git+https://github.com/supertokens/supertokens-python.git@788a076dceec8605c22a1259dcfec8b74a92b874",
    "uvicorn[standard]",
    "gunicorn",
    "weasyprint>=67.0",
    "ruff>=0.15.2",
    "fastapi-mail>=1.6.2",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/env.py" = ["E402"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
